--- a/config/jei/recipe-category-sort-order.ini
+++ b/config/jei/recipe-category-sort-order.ini
@@ -375,3 +375,6 @@ occultism:crushing
 occultism:miner
 occultism:ritual
 occultism:spirit_fire
+chickens:chicken_breeding
+chickens:chicken_drops
+chickens:chicken_laying
